[gd_scene load_steps=57 format=3 uid="uid://1xxxyd7vankg"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_d8375"]
[ext_resource type="Texture2D" uid="uid://ps7ndy3nu2s5" path="res://Sprites/Player/hoodie_falling.png" id="2_e7ame"]
[ext_resource type="Texture2D" uid="uid://buu50ffwa3ai8" path="res://Sprites/Player/hoodie_crawling.png" id="2_ve6ji"]
[ext_resource type="Texture2D" uid="uid://cetioomc48cq5" path="res://Sprites/Player/hoodie_jump.png" id="3_7o322"]
[ext_resource type="Texture2D" uid="uid://d0e6saxd2qw6h" path="res://Sprites/Player/hoodie_run-Sheet.png" id="3_gl3rg"]
[ext_resource type="Texture2D" uid="uid://balappl3ux8eh" path="res://Sprites/Player/hoodie_idle.png" id="4_hvta3"]
[ext_resource type="Shape2D" uid="uid://baufysw2o1mvx" path="res://recources/player_standing_cshape.tres" id="6_ufjga"]
[ext_resource type="Texture2D" uid="uid://bkrq360m737v5" path="res://Sprites/Player/hoodie_wallslide.png" id="7_qckec"]
[ext_resource type="AudioStream" uid="uid://bm32rf0on48pb" path="res://SFX/Footstep.wav" id="9_lcnsk"]
[ext_resource type="PackedScene" uid="uid://82lc1l37dyri" path="res://Scenes/pause_menu.tscn" id="9_o8s5e"]
[ext_resource type="AudioStream" uid="uid://lx34tllt5axs" path="res://SFX/jump.wav" id="10_iuc7q"]
[ext_resource type="Theme" uid="uid://8xsyb1abhsla" path="res://recources/menu_UI.tres" id="10_rmqam"]
[ext_resource type="AudioStream" uid="uid://cye5b3i0pwjro" path="res://SFX/landing_sound.wav" id="11_gm8rr"]
[ext_resource type="AudioStream" uid="uid://df46ahe1ap6pb" path="res://SFX/Death_platformer.wav" id="13_ihd8d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j42ar"]
atlas = ExtResource("2_ve6ji")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xls23"]
atlas = ExtResource("2_ve6ji")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1dx2"]
atlas = ExtResource("2_ve6ji")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2be2w"]
atlas = ExtResource("2_ve6ji")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlcux"]
atlas = ExtResource("2_ve6ji")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15pvk"]
atlas = ExtResource("2_e7ame")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l58a"]
atlas = ExtResource("2_e7ame")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_niqd0"]
atlas = ExtResource("2_e7ame")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gds5l"]
atlas = ExtResource("2_e7ame")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru0cp"]
atlas = ExtResource("3_7o322")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a02k5"]
atlas = ExtResource("4_hvta3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hx2t"]
atlas = ExtResource("4_hvta3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyy07"]
atlas = ExtResource("4_hvta3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkwd1"]
atlas = ExtResource("4_hvta3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy8oj"]
atlas = ExtResource("4_hvta3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4p0f"]
atlas = ExtResource("4_hvta3")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq7fe"]
atlas = ExtResource("4_hvta3")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2vx4"]
atlas = ExtResource("4_hvta3")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d6ac"]
atlas = ExtResource("3_7o322")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi8js"]
atlas = ExtResource("3_7o322")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1xao"]
atlas = ExtResource("3_gl3rg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhu7b"]
atlas = ExtResource("3_gl3rg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxe0g"]
atlas = ExtResource("3_gl3rg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1x4x"]
atlas = ExtResource("3_gl3rg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlsgp"]
atlas = ExtResource("3_gl3rg")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hu8px"]
atlas = ExtResource("3_gl3rg")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shk5a"]
atlas = ExtResource("3_gl3rg")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5442"]
atlas = ExtResource("3_gl3rg")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap37x"]
atlas = ExtResource("7_qckec")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0mo1"]
atlas = ExtResource("7_qckec")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlvsb"]
atlas = ExtResource("7_qckec")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o8tt"]
atlas = ExtResource("7_qckec")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jnux8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j42ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xls23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1dx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2be2w")
}],
"loop": true,
"name": &"Crouching",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlcux")
}],
"loop": true,
"name": &"CrouchingIdle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_15pvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l58a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niqd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gds5l")
}],
"loop": true,
"name": &"Falling",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru0cp")
}],
"loop": true,
"name": &"Flying",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a02k5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hx2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyy07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkwd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy8oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4p0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq7fe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2vx4")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d6ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi8js")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru0cp")
}],
"loop": false,
"name": &"Jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1xao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhu7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxe0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1x4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlsgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hu8px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shk5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5442")
}],
"loop": true,
"name": &"Run",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap37x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0mo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlvsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o8tt")
}],
"loop": true,
"name": &"Wallslide",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_lmpq5"]
colors = PackedColorArray(0.646029, 0.646029, 0.646029, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_yph3e"]
colors = PackedColorArray(0.796243, 0.796243, 0.796243, 1, 1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nrwkg"]
bg_color = Color(0.956863, 0.956863, 0.956863, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0235294, 0.0235294, 0.0235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.968627, 0.968627, 0.968627, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cpn20"]
bg_color = Color(0.956863, 0.956863, 0.956863, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0235294, 0.0235294, 0.0235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_u021c"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0, 0, 0, 0.501961)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
Button/font_sizes/font_size = 20
Button/styles/hover = SubResource("StyleBoxFlat_nrwkg")
Button/styles/normal = SubResource("StyleBoxFlat_cpn20")
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 2
LineEdit/colors/font_outline_color = Color(0, 0, 0, 1)
LineEdit/font_sizes/font_size = 16

[sub_resource type="Gradient" id="Gradient_o15l8"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_jo5tp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/CanvasLayer/Control/StartsIn:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Strats in: 3"]
}

[sub_resource type="Animation" id="Animation_6blhc"]
resource_name = "StartCoutdown_anim"
length = 3.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/CanvasLayer/Control/StartsIn:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1.1, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["Strats in: 3", "Strats in: 2", "Strats in: 1"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mnely"]
_data = {
"RESET": SubResource("Animation_jo5tp"),
"StartCoutdown_anim": SubResource("Animation_6blhc")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 3
collision_mask = 7
floor_stop_on_slope = false
floor_constant_speed = true
floor_max_angle = 0.872665
floor_snap_length = 3.0
script = ExtResource("1_d8375")
wall_jump_velocity = -300.0
wall_jump_push = 350.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jnux8")
animation = &"Idle"
autoplay = "Idle"

[node name="CPUParticles2D" type="CPUParticles2D" parent="AnimatedSprite2D"]
position = Vector2(5, 13)
emitting = false
amount = 30
lifetime = 0.7
lifetime_randomness = 0.2
emission_shape = 2
emission_sphere_radius = 3.0
gravity = Vector2(0, -70)
color_ramp = SubResource("Gradient_lmpq5")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="AnimatedSprite2D"]
position = Vector2(0, 15)
emitting = false
amount = 20
lifetime = 0.3
one_shot = true
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(8, 0)
direction = Vector2(0, -1)
spread = 10.0
gravity = Vector2(0, 200)
initial_velocity_min = 20.0
initial_velocity_max = 30.0
radial_accel_min = 15.81
radial_accel_max = 50.42
color_ramp = SubResource("Gradient_yph3e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = ExtResource("6_ufjga")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="PauseMenu" parent="Camera2D/CanvasLayer" instance=ExtResource("9_o8s5e")]
visible = false

[node name="LevelTimer" type="Label" parent="Camera2D/CanvasLayer"]
custom_minimum_size = Vector2(64, 0)
offset_left = 544.0
offset_top = 24.0
offset_right = 624.0
offset_bottom = 50.0
theme = SubResource("Theme_u021c")
vertical_alignment = 1

[node name="Control" type="Control" parent="Camera2D/CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 368.0
theme = ExtResource("10_rmqam")

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer/Control"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 368.0
color = Color(0, 0, 0, 0.705882)

[node name="StartsIn" type="Label" parent="Camera2D/CanvasLayer/Control"]
layout_mode = 0
offset_left = 264.0
offset_top = 120.0
offset_right = 376.0
offset_bottom = 146.0
text = "Strats in: 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="info" type="Label" parent="Camera2D/CanvasLayer/Control"]
layout_mode = 0
offset_left = 200.0
offset_top = 168.0
offset_right = 440.0
offset_bottom = 194.0
text = "Or press SPACE to skip timer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CrouchRaycast1" type="RayCast2D" parent="."]
position = Vector2(-5, 11)
target_position = Vector2(0, -19)
collision_mask = 3

[node name="CrouchRaycast2" type="RayCast2D" parent="."]
position = Vector2(5, 11)
target_position = Vector2(0, -19)
collision_mask = 3

[node name="WallDetectionRight" type="RayCast2D" parent="."]
position = Vector2(0, 4)
target_position = Vector2(6, 0)
collision_mask = 3

[node name="WallDetectionLeft" type="RayCast2D" parent="."]
position = Vector2(0, 4)
target_position = Vector2(-6, 0)
collision_mask = 3

[node name="audio" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="audio"]
wait_time = 0.4
one_shot = true

[node name="walkingSound" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("9_lcnsk")
volume_db = -5.0
bus = &"Sound effects"

[node name="jump" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("10_iuc7q")
volume_db = -10.0
bus = &"Sound effects"

[node name="Death" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("13_ihd8d")
volume_db = -10.0
bus = &"Sound effects"

[node name="land" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("11_gm8rr")
volume_db = -5.0
pitch_scale = 4.0
bus = &"Sound effects"

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
position = Vector2(0, 4)
emitting = false
amount = 30
lifetime = 0.5
one_shot = true
explosiveness = 0.9
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 20.0
damping_min = 10.0
damping_max = 20.0
scale_amount_min = 2.0
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_o15l8")

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="StartCountdown" type="Timer" parent="."]
wait_time = 3.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mnely")
}
autoplay = "StartCoutdown_anim"

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="StartCountdown" to="." method="_on_start_countdown_timeout"]
